# RobotS

./: .gitignore  .justfile  .pre-commit-config.yaml  Cargo.toml  README.md  bacon.toml  flake.nix  rust-toolchain.toml  shell.nix  tailwind.config.js  zellij.kdl
.cargo/: config.toml
robots-drv/: Cargo.toml
robots-drv/src/: codec.rs  error.rs  lib.rs  main.rs
robots-esp/: .justfile  Cargo.toml
robots-esp/.cargo/: config.toml
robots-esp/src/: main.rs
robots-lib/: Cargo.toml
robots-lib/src/: aht20.rs  error.rs  lib.rs  relay.rs
robots-stm/: .justfile  Cargo.toml  Embed.toml
robots-stm/.cargo/: config.toml
robots-stm/src/: main.rs
robots-web/: Cargo.toml  tailwind.config.js
robots-web/src/: app.rs  cmd_logger.rs  cmd_sender.rs  error.rs  http.rs  lib.rs  main.rs  queues.rs  uart.rs
src/: main.rs
