[package]
name = "esp_msg"
version = "0.1.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.8.0" }
esp-backtrace = { version = "0.6.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println       = { version = "0.4.0", features = ["esp32c3"] }
