[package]
name = "robots-drv"
version = "0.1.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broadcaster = "1"
bytes = "1"
futures = "0.3"
lazy_static = "1"
robots-lib = { path = "../robots-lib" }
serialport = "4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = { version = "5", features = ["tokio-util", "bytes", "codec", "rt"] }
tokio-util = { version = "0.7", features = ["full"] }
