[package]
name = "robots-esp"
version = "0.1.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.1"
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-sync = "0.1.0"
embassy-time = { version = "0.1.0", features = ["nightly", "tick-hz-1_000_000"] }
esp-backtrace = { version = "0.6.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-hal-common = { version = "0.8.0", features = ["esp32c3", "embassy", "embassy-time-timg0"] }
esp32c3-hal = "0.8.0"
robots-lib = { path = "../robots-lib" }
static_cell = "1.0.0"

[features]
default = []
monitor = []

[package.metadata.cargo-machete]
ignored = ["esp-hal-common"]  # for embassy
