[package]
name = "robots-esp"
version = "0.1.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = "1.1.1"
embassy-executor = { version = "0.3.1", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-sync = "0.1.0"
embassy-time = { version = "0.1.5", features = ["nightly", "tick-hz-1_000_000"] }
embedded-hal-async = "=1.0.0-rc.1"
embedded-io-async  = "0.6.0"
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-hal-common = { version = "0.13.0", features = ["esp32c3", "embassy", "embassy-time-timg0", "async"] }
esp-hal-smartled = { version = "0.6.0", features = ["esp32c3"] }
esp-println = { version = "0.7.0", features = ["esp32c3"] }
esp32c3-hal = "0.13.0"
heapless = "0.7"
robots-lib = { path = "../robots-lib", features = ["esp32c3"] }
smart-leds = "0.3.0"
static_cell = { version = "1.2.0", features = ["nightly"] }

[features]
default = []
monitor = []

[package.metadata.cargo-machete]
ignored = ["esp-hal-common"]  # for embassy
