[package]
name = "robots-stm"
version = "0.1.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
futures = { version = "0.3.29", features = ["async-await"], default-features = false }
heapless = { version = "0.8.0", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
robots-lib = { path = "../robots-lib", features = ["defmt"] }
static_cell = { version = "2.0.0", features = ["nightly"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
