[package]
name = "robots-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
async-channel = { version = "1.8.0", optional = true }
broadcaster = { version = "1.0.0", optional = true }
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "1"
futures = { version = "0.3.28" }
gloo-net = { version = "0.2.6", optional = true }
lazy_static = { version = "1.4.0", optional = true }
leptos = { version = "0.3", default-features = false, features = [
  "serde",
] }
leptos_actix = { version = "0.3", optional = true }
leptos_meta = { version = "0.3", default-features = false }
leptos_router = { version = "0.3", default-features = false }
log = "0.4"
robots-drv = { path = "../robots-drv", optional = true }
robots-lib = { path = "../robots-lib" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serialport = { version = "4.2.0", optional = true }
simple_logger = "4"
thiserror = "1"
tokio = { version = "1.27.0", features = ["sync", "full"], optional = true }
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:gloo-net", "robots-lib/wasm"]
ssr = ["dep:actix-files", "dep:actix-web", "dep:lazy_static", "dep:leptos_actix", "dep:robots-drv",
"dep:tokio", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:serialport", "dep:async-channel",
"dep:broadcaster", "robots-lib/std"]

[package.metadata.leptos]
output-name = "robots-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
tailwind-input-file = "style/tailwind.css"
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
